--- a/.github/workflows/update-strava.yml
+++ b/.github/workflows/update-strava.yml
@@ -2,8 +2,8 @@ name: Update Strava Activity Titles
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # Runs at 8 AM UTC daily
-  workflow_dispatch:      # Allows manual trigger
+    - cron: '0 7 * * *'
+  workflow_dispatch:
 
 jobs:
   update-activities:
